Fix page scaling issues on mobile.

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,17 +8,17 @@
 
 .canvas {
 	position: absolute;
-	bottom: 0;
+	top: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100dvw;
+	height: 100dvh;
 }
 
 .controls {
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	width: 100vw;
+	width: 100dvw;
 	padding: 1em;
 	display: flex;
 	flex-direction: row;
